--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "diff": "^5.2.0",
     "dotenv": "^16.4.7",
     "file-saver": "^2.0.5",
-    "framer-motion": "^11.12.0",
+    "framer-motion": "^11.18.2",
     "ignore": "^6.0.2",
     "isbot": "^4.4.0",
     "isomorphic-git": "^1.27.2",
@@ -98,6 +98,7 @@
     "react-hotkeys-hook": "^4.6.1",
     "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.1.7",
+    "react-router-dom": "^7.1.5",
     "react-toastify": "^10.0.6",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
@@ -105,6 +106,7 @@
     "remix-island": "^0.2.0",
     "remix-utils": "^7.7.0",
     "shiki": "^1.24.0",
+    "tailwind": "^4.0.0",
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
